<resources>
    <string name="app_name">TaxiAlaan Captain</string>
    <string name="successful_operation">Successful Operation</string>
    <string name="balance_is_not_enough">Balance Is Not Enough</string>
    <string name="wallet_not_found">Wallet Not Found!</string>
    <string name="transactions_list">Transactions List</string>
    <string name="charge_code_applied_successfully">Charge Code Applied Successfully</string>
    <string name="withdraw_amount">Withdraw Amount</string>
    <string name="balance_is_low">Balance Is Low!</string>
    <string name="accounts_charge">Accounts Charge</string>
    <string name="send_money">Send Money</string>
    <string name="remain_balance">Remain Balance</string>
    <string name="charge_by_cash">Charge by cash</string>
    <string name="charge_by_code">Charge by code</string>
    <string name="transfered_by_user">Transfered by user</string>
    <string name="transfered_to_user">Transfered to user</string>
    <string name="transfered_by_provider">Transfered by provider</string>
    <string name="transfered_to_provider">Transfered to provider</string>
    <string name="trip">Trip</string>
    <string name="withdraw">Withdraw</string>
    <string name="confirmed">Confirmed</string>
    <string name="pending">Pending</string>
    <string name="rejected">Rejected</string>
    <string name="request">Request</string>
    <string name="wallet_id">Wallet id</string>
    <string name="balance">Balance</string>
    <string name="charge_code">Charge Code</string>
    <string name="send">Send</string>
    <string name="invalid_charge_code">Invalid Charge Code</string>
    <string name="are_you_sure_for_send_money_to">Are you sure for send money to</string>
    <string name="wallet_commission">Commission</string>


    <!--Google map-->
    <!--string name="google_map_api">AIzaSyDStEHD8qw0Ng7lDxM5h3ZI5DtlMQVwd_w</string>-->
    <string name="google_map_api">AIzaSyDN3uWFHBmQOM3eTJ635_cgcFA8HvcVDoU</string>

    <!-- TODO: Remove or change this placeholder text -->

    <!-- Facebook Login Key  -->
    <!--<string name="facebook_app_id">1771763759506843</string>-->
    <!--<string name="facebook_app_id">2106559419593599</string>-->
    <!--string name="facebook_app_id">2106559419593599</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">7111257bfe7aaab6ee47060bf85426ac</string>-->
    <string name="please_wait">Please wait&#8230;</string>

    <string name="FACEBOOK_APP_ID">775580432823091</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">37b3ecd0f1b894ba351ca0df105b25cb</string>


    <!--<string name="facebook_app_id">141223863110656</string>-->

    <!--navigation_drawer-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="waitingForApproval">Waiting for your account to be verified by our authority.</string>

    <string name="action_settings">Settings</string>

    <!--Activity Begin-->
    <string name="get_moving_with_taxialaan">Get moving with TaxiAlaan - Captain</string>
    <string name="or_connect_with_social_media">Or connect with social</string>

    <!--Activity Email -->

    <!--Activity Password -->
    <string name="i_forgot_my_password">I forgot my password</string>
    <string name="i_need_to_create_an_account">I need to create an account</string>


    <!--Activity Register-->
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="Introducer_code">Introducer Code</string>
    <!-- Activity ForgetPassword -->


    <!-- Edit Activity-->
    <string name="edit_profile">Edit Account</string>
    <string name="change_password">Looking to change password?</string>
    <string name="save">SAVE</string>
    <string name="update_success">Profile Updated.</string>

    <!--Show Dailog-->
    <string name="connect_to_network">Connect to network or quit</string>
    <string name="connect_to_wifi">Connect to WIFI</string>
    <string name="quit">Quit</string>
    <string name="cancel_ride">Cancel ride</string>
    <string name="cencel_request">Are you sure you want to cancel the ride?</string>
    <string name="exit_confirm">Are you sure you want to logout?</string>


    <!-- Error Messages-->
    <string name="something_went_wrong">Something went wrong.</string>
    <string name="something_went_wrong_net">Something went wrong, Please check internet connection.</string>
    <string name="server_down">Unable to reach server.</string>
    <string name="please_try_again">Please try again.</string>
    <string name="first_name_empty">First name required.</string>
    <string name="last_name_empty">Last name required.</string>
    <string name="mobile_number_empty">Mobile number required.</string>
    <string name="request_reject">Request rejected successfully</string>
    <string name="request_accept">Request accepted successfully</string>
    <string name="request_cancel">You have cancelled the request</string>

    <string name="pls_wait">Please wait...</string>
    <!--Approval status-->
    <string name="approved">Approved</string>
    <string name="banned">Banned</string>
    <string name="waiting_for_approval">Waiting for Approval</string>

    <!--Wallet Fragment-->
    <string name="your_wallet_amount">Your wallet amount is</string>
    <string name="sample_amount">1450</string>

    <!--Offline Activity -->
    <string name="go_online">Go Online</string>
    <string name="go_offline">GO OFFLINE</string>

    <!--Invalid Username and Password-->


    <!--True or False -->
    <string name="True" translatable="false">true</string>
    <string name="False" translatable="false">false</string>

    <!--Your Trips-->
    <string name="history">History</string>
    <string name="comments">Comments</string>
    <string name="no_trips">No trip available.</string>
    <string name="no_upcoming_trips">No Upcoming trips available.</string>
    <string name="no_rides">No rides completed.</string>
    <string name="upcoming">Upcoming</string>
    <string name="past">Past</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="yourtrip">Your Trips</string>
    <string name="ratetrip">Rate your trip</string>
    <string name="write">Write your comments</string>

    <string name="pasttrip">Past Trips</string>

    <!--Flow status -->
    <string name="tap_when_arrived">TAP WHEN ARRIVED</string>
    <string name="tap_when_pickedup">TAP WHEN PICKEDUP</string>
    <string name="tap_when_dropped">TAP WHEN DROPPED</string>
    <string name="tap_when_paid">CONFIRM PAYMENT</string>
    <string name="rate_user">SUBMIT</string>


    <!--Change Password-->
    <string name="change_password_title">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm New Password</string>
    <string name="please_enter_current_pass">Please enter current password.</string>
    <string name="please_enter_new_pass">Please enter new password.</string>
    <string name="please_enter_confirm_pass">Please enter confirmation password.</string>
    <string name="different_passwords">Password doesn\'t match.</string>


    <!--Side Navigation Menu -->
    <string name="home">Home</string>
    <string name="your_trips">Your Trips</string>
    <string name="wallet">Wallet</string>
    <string name="help">Help</string>
    <string name="earnings">Earnings</string>
    <string name="share">Share</string>
    <string name="logout">Logout</string>
    <string name="valid_image">No image found</string>
    <string name="user_no_mobile">User do not have a valid mobile number.</string>
    <string name="request_time_out">Request Timeout</string>
    <string name="cancel_confirm">Are you sure you want to cancel the ride?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="service">Service</string>
    <string name="no_services">No services assigned</string>
    <string name="no_comments">No comment available</string>
    <string name="profile">Profile</string>
    <string name="call">Call</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="sos_confirm">Are you sure want to proceed with emergency call?</string>
    <string name="pick_up">Pick up Location </string>
    <string name="drop_at">Drop Location </string>
    <string name="reason_to_cancel">Reason to cancel</string>
    <string name="booking_id_colon">Booking ID : </string>
    <string name="booking_id">Booking ID</string>
    <string name="reason">Reason</string>
    <string name="submit">Submit</string>
    <string name="summary">Summary</string>
    <string name="total_rides">TOTAL NO OF RIDES</string>
    <string name="total_earnings">Total Earnings</string>
    <string name="amount">Amount</string>
    <string name="distance">Distance</string>
    <string name="time">Time</string>
    <string name="target">Target\nCompleted</string>

    <string name="revenue">REVENUE</string>
    <string name="schedule_rides">NO OF SCHEDULED RIDES</string>
    <string name="canceled_rides">CANCELLED RIDES</string>
    <string name="rides">Rides</string>
    <string name="upcoming_rides">Upcoming rides</string>
    <string name="help_msg">Our team person contact\n you soon!</string>
    <string name="no_address">No address available</string>
    <string name="first_name_no_number">First name do not accept numbers</string>
    <string name="last_name_no_number">Last name do not accept numbers</string>
    <string name="select_language">Select Language</string>
    <string name="register_title">Enter your details to register</string>
    <string name="choose_language">Pick your language</string>
    <string name="confirm">Confirm </string>
    <string name="language">Change Language</string>
    <string name="english">English</string>
    <string name="arabic">عربى</string>
    <string name="kurdish">Kurdî</string>

    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="what_s_your_phone_number">What\'s your phone number?</string>
    <string name="email_optional">Email (Optional)</string>
    <string name="total">Total</string>
    <string name="cash">CASH</string>

    <string name="Pay_By_User_Wallet">Pay By User Wallet</string>
    <string name="Pay_By_User_In_Cash">Pay By User In Cash</string>
    <string name="Transfer_To_User_Wallet">Transfer To User Wallet</string>
    <string name="AmountisLess">The Entered Amount is Less Than Trip Pirce!:</string>
    <string name="Travel_costs">Travel Costs</string>
    <string name="Discount">Discount</string>

    <string name="internet">Please check your internet connection. It may be weak or disconnected</string>

    <string-array name="select_language">
        <item>English</item>
        <item>عربى</item>
        <item>Kurdî</item>
    </string-array>

</resources>
