<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:visible="false" />
        <item
            android:id="@+id/nav_wallet_manager"
            android:icon="@drawable/utility"
            android:title="@string/wallet" />
        <item
            android:id="@+id/nav_yourtrips"
            android:icon="@drawable/trip"
            android:title="@string/your_trips" />
        <item
            android:id="@+id/nav_earnings"
            android:icon="@drawable/profit"
            android:title="@string/earnings" />
        <item
            android:id="@+id/nav_wallet"
            android:icon="@drawable/summary"
            android:title="@string/summary" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/help"
            android:title="@string/help" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/share"
            android:title="@string/share" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/logout" />
    </group>

</menu>
