<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@android:color/black"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/_10sdp"
        android:paddingStart="@dimen/_10sdp"
        android:text="@string/reason_to_cancel"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_13sdp" />


    <EditText
        android:id="@+id/reason_etxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:gravity="start"
        android:hint="@string/reason"
        android:textColor="@android:color/black"
        android:lines="3"
        android:textSize="@dimen/_11sdp" />

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_5sdp"
        android:background="@android:color/black"
        android:text="@string/submit"
        android:textColor="@android:color/white" />

</LinearLayout>
